# FPGA-MLIR

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
.claude/: settings.local.json
ai_optimizer/: requirements.txt
ai_optimizer/auto_quant/: sensitivity.py
ai_optimizer/op_fusion/: gnn_model.py  graph_builder.py  train_fusion.py
ai_optimizer/tiling_search/: bayesian_opt.py  env.py  rl_agent.py
c_reference/: _model.23_one2one_cv2.1_one2one_cv2.1.2_Conv_output_0  _model.23_one2one_cv2.2_one2one_cv2.2.2_Conv_output_0  _model.23_one2one_cv3.1_one2one_cv3.1.2_Conv_output_0  basic.c  basic.h  layerx_q.image  macro.c  output  parse_basic.c  parse_node.c  parse_tensor.c  resnet_inference.c  test  test_tensor  yolo10_inference.c
c_reference/act/: act.py
c_reference/bias/: bias.coe  bias.image  notes.txt
c_reference/bugs/: notes.txt
c_reference/float_image/: img01.bin.bk
c_reference/initializer/: 139_scale  148_scale  164_scale  171_scale  180_scale  193_quantized  194_quantized  195_scale  197_quantized  199_quantized  199_scale  201_scale  205_scale  207_scale  208_quantized  208_scale  209_quantized  210_scale  210_zero_point  211_quantized  211_scale  212_quantized  214_quantized  217_scale  220_quantized  222_scale  223_scale  224_quantized  225_zero_point  226_scale  229_quantized  229_scale  230_quantized  231_scale  232_quantized  232_scale  233_quantized  234_scale  235_quantized  235_scale  (+16 more)
c_reference/input/: input.image
c_reference/instruction/: ins.py  instruction_hex.txt  output.coe
c_reference/operator/: elewise.c  operator.h  resize.c
c_reference/output_combine/: _model.23_one2one_cv2.0_one2one_cv2.0.2_Conv_output_0  combine.py
c_reference/output_result_file/: _model.10_Add_output_0_quantized  _model.10_Concat_output_0_quantized  _model.10_cv1_conv_Conv_output_0_quantized  _model.10_cv2_act_Mul_output_0_quantized  _model.10_ffn_ffn.0_conv_Conv_output_0_quantized  _model.10_ffn_ffn.1_conv_Conv_output_0_quantized  _model.12_Concat_output_0_quantized  _model.13_Concat_output_0_quantized  _model.13_cv2_conv_Conv_output_0_quantized  _model.13_m.0_cv1_conv_Conv_output_0_quantized  _model.13_m.0_cv2_act_Mul_output_0_quantized  _model.16_cv1_act_Mul_output_0_quantized  _model.16_cv1_conv_Conv_output_0_quantized  _model.16_cv2_conv_Conv_output_0_quantized  _model.16_m.0_cv1_conv_Conv_output_0_quantized  _model.16_m.0_cv2_act_Mul_output_0_quantized  _model.16_m.0_cv2_conv_Conv_output_0_quantized  _model.17_conv_Conv_output_0_quantized  _model.19_cv1_act_Mul_output_0_quantized  _model.19_cv1_conv_Conv_output_0_quantized  _model.19_m.0_cv1_act_Mul_output_0_quantized  _model.19_m.0_cv1_conv_Conv_output_0_quantized  _model.19_m.0_cv2_conv_Conv_output_0_quantized  _model.20_cv1_act_Mul_output_0_quantized  _model.21_Concat_output_0_quantized  _model.22_cv1_act_Mul_output_0_quantized  _model.22_cv2_act_Mul_output_0_quantized  _model.22_cv2_conv_Conv_output_0_quantized  _model.22_m.0_Add_output_0_quantized  _model.22_m.0_cv1_cv1.0_act_Mul_output_0_quantized  _model.22_m.0_cv1_cv1.1_act_Mul_output_0_quantized  _model.22_m.0_cv1_cv1.4_act_Mul_output_0_quantized  _model.22_m.0_cv1_cv1.4_conv_Conv_output_0_quantized  _model.23_one2one_cv2.0_one2one_cv2.0.1_act_Mul_output_0_quantized  _model.23_one2one_cv2.1_one2one_cv2.1.0_conv_Conv_output_0_quantized  _model.23_one2one_cv2.1_one2one_cv2.1.2_Conv_output_0_quantized  _model.23_one2one_cv2.2_one2one_cv2.2.0_conv_Conv_output_0_quantized  _model.23_one2one_cv2.2_one2one_cv2.2.1_conv_Conv_output_0_quantized  _model.23_one2one_cv2.2_one2one_cv2.2.2_Conv_output_0_quantized  _model.23_one2one_cv3.0_one2one_cv3.0.0_one2one_cv3.0.0.0_conv_Conv_output_0_quantized  (+44 more)
c_reference/parameters/: zero_points.txt
c_reference/split/: model.13.cv1.conv.bias_quantized  model.16.cv1.conv.weight_quantized  (+7 more)
coa/: __init__.py  hw_export.py  mlir_parser.py  onnx_importer.py  pruning.py  quantize.py  tiling.py  vliw.py
coa_compiler/: CMakeLists.txt
coa_compiler/tools/coa-opt/: CMakeLists.txt
compiler/: CMakeLists.txt  build.bat
compiler/tools/coa-compiler/: CMakeLists.txt  coa-compiler.cpp
doc/: README.md  pass_pipeline.md
docs/: README.md  ai_optimizer.md  pass_pipeline.md  project_summary.md
examples/: README.md
old_version/: run_compare.py
optimizer/: __init__.py
parameters/: bias.coe  relu.coe  vliw.image  vliw_hex.txt  vliw_offset.txt
tests/: test_ai_optimizer.py  test_frontend.py  test_interpreter.py  test_quantize.py  test_quantize_e2e.py  test_vliw_codegen.py
tools/: assign_addr.py  calc_weight_addr.py  check_npz.py  compare_hw_params.py  extract_all.py  extract_bias.py  extract_input.py  extract_relu.py  extract_vliw.py  generate_calib_data.py  graph TD.mmd  graph.md  onnx_to_mlir.py  quant_export_data.py  quant_plot.py  quant_report.py  quantization.py  test_addr.py  test_addr_validation.py  test_tile.py
(+265 files in other folders)
