[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fpga-mlir-optimizer"
version = "0.1.0"
description = "AI optimizer modules for the FPGA-MLIR compiler (tiling search / op fusion / auto-quant)"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "onnx>=1.14",
]

[project.optional-dependencies]
tiling = ["optuna>=3.0", "torch>=2.0"]
fusion = ["torch>=2.0", "torch-geometric>=2.3"]
quant  = ["pymoo>=0.6"]
viz    = ["matplotlib>=3.7", "pandas>=2.0"]
all    = ["optuna>=3.0", "torch>=2.0", "torch-geometric>=2.3", "pymoo>=0.6",
          "matplotlib>=3.7", "pandas>=2.0"]
dev    = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["optimizer*", "coa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
